doc/docs/1.13.x/getting-started/index.md
# Getting Started

Pachyderm is a **data-centric pipelining and versioning tool** that allows ML and Data-Science teams to automate and collaborate on their organization's data while maintaining full reproducibility.

For a quick start, deploy Pachyderm on your [local machine](./local-installation/). 

!!! Note "Got questions?"
     [Request a demo](https://www.pachyderm.com/request-a-demo/){target=_blank}, join our [Users Slack Channel](https://www.pachyderm.com/slack/){target=_blank}, or [Contact our Support Team](mailto:support@pachyderm.io).

!!! Attention "**Extend your Community Edition with an Enterprise license**"
    [Contact us](mailto:sales@pachyderm.com) and start experimenting.


<div class="row">
  <div class="column-1">
    <div class="card-square mdl-card mdl-shadow--2dp">
      <div class="mdl-card__title mdl-card--expand">
        <h4 class="mdl-card__title-text">Deploy Locally &nbsp;&nbsp;&nbsp;<i class="fa fa-laptop"></i></h4>
      </div>
      <div class="mdl-card__supporting-text">
        Deploy Pachyderm on your computer and run our tutorials.
      </div>
      <div class="mdl-card__actions mdl-card--border">
        <ul>
          <li><a href="local-installation/" class="md-typeset md-link">
          Deploy Locally
          </a>
          </li>
          <li><a href="beginner-tutorial/" class="md-typeset md-link">
          Beginner Tutorial
          </a>
          </li>
          <li><a href="../examples/examples" class="md-typeset md-link">
          More Tutorials, Examples, and MLOps stack product Integration
          </a>
          </li>
          <li><a href="wsl-deploy/" class="md-typeset md-link">
          Deploy Locally on Windows
          </a>
          </li>
          <li><a href="install-pachctl-completion/" class="md-typeset md-link">
          Install pachctl Autocompletion
          </a>
          </li>
          <li><a href="../deploy-manage/manage/pachctl_shell/" class="md-typeset md-link">
          Use pachctl Shell
          </a>
          </li>
        </ul>
       </div>
     </div>
  </div>
</div>

